# netwatch

./: .gitignore  Cargo.toml  Makefile  README.md
src/: alert.rs  config.rs  main.rs  model.rs  monitor.rs  web.rs
static/: index.html
static/css/: style.css
static/js/: app.js
