[package]
name = "netwatch"
version = "0.4.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
once_cell = "1.19"
dashmap = "5.5"
# 新增依赖
surge-ping = "0.8" # ICMP
trust-dns-resolver = "0.23" # DNS (latest stable before rename to hickory)
uuid = { version = "1.7", features = ["v4", "serde"] } # 生成 ID
async-trait = "0.1"
rust-embed = "8.11.0"
mime_guess = "2.0.5"

